# Streamlit-Chatbot

./: .gitignore  Chat.py  Dockerfile  app.py  cdk-app.py  cdk.context.json  cdk.json  package-lock.json  package.json  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml
admin/: users.csv
app_pages/: Add_User.py  Chat.py  Manage_Training_Data.py  Upload_Training_Data.py
cdk_lib/: chatbot_stack.py
pages/: Upload_Training_Data.py
shared/: __init__.py  training.py
src/: __init__.py  app.py  convert_files.py
training_models/New files to learn/: CaseInfo.txt
training_models/OT ishhhhhh/: Customer Contract - 8804 W 115th Street, Overland Park, KS 66210 - Breault.txt  Irongate Covenants Recorded 2-9-16 (2) (2) (1) (1) (1) (2).txt  u6c7w91rgcc1hll8a6.txt
training_models/Sleep coach stuff/: Alex Breault Resume - 2025.txt
